feat(elk-stack-setup): add ecs logging for elastic setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
 
 #If both properties are set, only logging.file.name takes effect.
-logging.file.path=logs/
-logging.file.name=logs/ecd.log
+logging.path=logs/
+logging.file.name=logs/ecd-api.log
 logging.logback.rollingpolicy.max-file-size=2MB
 logging.logback.rollingpolicy.max-history=1
 logging.level.org.springframework=DEBUG
